[gd_scene load_steps=22 format=4 uid="uid://cnhbrpo4htp2y"]

[ext_resource type="Script" path="res://MainMenu/main_menu.gd" id="1_4xjwr"]
[ext_resource type="PackedScene" uid="uid://d0aswr8q0lpei" path="res://Level/Tiles.tscn" id="1_tpybg"]
[ext_resource type="PackedScene" uid="uid://bjekrlb1r8icx" path="res://MainMenu/ButtonShootClick.tscn" id="3_0uxqg"]
[ext_resource type="Script" path="res://MainMenu/ButtonData/button_data.gd" id="4_7hy75"]
[ext_resource type="Script" path="res://MainMenu/ButtonData/ButtonActions/reset_wave.gd" id="4_u2f2c"]
[ext_resource type="Script" path="res://MainMenu/Scripts/door.gd" id="5_emg15"]
[ext_resource type="Texture2D" uid="uid://dbvkhim2q6dke" path="res://MainMenu/Sprites/BigDoor on Wood.png" id="6_p5fwk"]
[ext_resource type="Script" path="res://MainGame/current_money.gd" id="8_ftbyc"]
[ext_resource type="Script" path="res://MainMenu/ButtonData/ButtonActions/next_wave_action.gd" id="9_xr3g3"]
[ext_resource type="Script" path="res://MainMenu/ButtonData/ButtonActions/add_money_action.gd" id="10_aa3ac"]
[ext_resource type="Script" path="res://MainMenu/music_button.gd" id="11_rwkms"]
[ext_resource type="Texture2D" uid="uid://c8xvliip7pqim" path="res://MainMenu/Sprites/Arrow Sign.png" id="12_a6mvh"]

[sub_resource type="Resource" id="Resource_nby2t"]
script = ExtResource("4_u2f2c")

[sub_resource type="Resource" id="Resource_fjbbq"]
script = ExtResource("4_7hy75")
button_action = SubResource("Resource_nby2t")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_linbi"]
size = Vector2(34, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kh562"]
size = Vector2(8, 31)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2shqy"]
size = Vector2(36, 32)

[sub_resource type="Resource" id="Resource_bvb62"]
script = ExtResource("9_xr3g3")

[sub_resource type="Resource" id="Resource_etkyy"]
script = ExtResource("4_7hy75")
button_action = SubResource("Resource_bvb62")

[sub_resource type="Resource" id="Resource_ssi0y"]
script = ExtResource("10_aa3ac")

[sub_resource type="Resource" id="Resource_ctujf"]
script = ExtResource("4_7hy75")
button_action = SubResource("Resource_ssi0y")

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_4xjwr")

[node name="Tiles" parent="." instance=ExtResource("1_tpybg")]
tile_map_data = PackedByteArray("AAATAAAAAAAAAAAAAAASAAAAAAAAAAAAAAARAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAPAAAAAAAAAAAAAAAOAAAAAAAAAAAAAAANAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAALAAAAAAAAAAAAAAAKAAAAAAAAAAAAAAAJAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAHAAAAAAAAAAAAAAAGAAAAAAAAAAAAAAAFAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAADAAAAAAAAAAAAAAACAAAAAAAAAAAAAAABAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAEAAAAAAAAAAAAVAAAAAAAAAAAAAAAUAAAAAAAAAAAAAAAWAAAAAAAAAAAAAAAWAAEAAAAAAAAAAAAWAAIAAAAAAAAAAAAWAAMAAAAAAAAAAAAAAAcAAAAAAAAAAAABAAcAAAAAAAAAAAACAAcAAAAAAAAAAAADAAcAAAAAAAAAAAAEAAcAAAAAAAAAAAAFAAcAAAAAAAAAAAAGAAcAAAAAAAAAAAAHAAcAAAAAAAAAAAAIAAcAAAAAAAAAAAAJAAcAAAAAAAAAAAAKAAcAAAAAAAAAAAALAAcAAAAAAAAAAAAMAAcAAAAAAAAAAAANAAcAAAAAAAAAAAAOAAcAAAAAAAAAAAAPAAcAAAAAAAAAAAAQAAcAAAAAAAAAAAARAAcAAAAAAAAAAAASAAcAAAAAAAAAAAATAAcAAAAAAAAAAAAUAAcAAAAAAAAAAAAVAAcAAAAAAAAAAAAWAAcAAAAAAAAAAAAAAAQAAAAAAAAAAAAWAAQAAAAAAAAAAAAAAAgAAAAAAAAAAAABAAgAAAAAAAAAAAACAAgAAAAAAAAAAAADAAgAAAAAAAAAAAAEAAgAAAAAAAAAAAAFAAgAAAAAAAAAAAAGAAgAAAAAAAAAAAAHAAgAAAAAAAAAAAAIAAgAAAAAAAAAAAAJAAgAAAAAAAAAAAAKAAgAAAAAAAAAAAALAAgAAAAAAAAAAAAMAAgAAAAAAAAAAAANAAgAAAAAAAAAAAAOAAgAAAAAAAAAAAAPAAgAAAAAAAAAAAAQAAgAAAAAAAAAAAARAAgAAAAAAAAAAAASAAgAAAAAAAAAAAATAAgAAAAAAAAAAAAUAAgAAAAAAAAAAAAVAAgAAAAAAAAAAAAWAAgAAAAAAAAAAAD//wAAAAAAAAAAAAD//wEAAAAAAAAAAAD//wIAAAAAAAAAAAD//wMAAAAAAAAAAAD//wQAAAAAAAAAAAD//wUAAAAAAAAAAAD//wYAAAAAAAAAAAD//wcAAAAAAAAAAAD//wgAAAAAAAAAAAAXAAAAAAAAAAAAAAAXAAEAAAAAAAAAAAAXAAIAAAAAAAAAAAAXAAMAAAAAAAAAAAAXAAQAAAAAAAAAAAAXAAUAAAAAAAAAAAAXAAYAAAAAAAAAAAAXAAcAAAAAAAAAAAAXAAgAAAAAAAAAAAD/////AAAAAAAAAAAAAP//AAAAAAAAAAABAP//AAAAAAAAAAACAP//AAAAAAAAAAADAP//AAAAAAAAAAAEAP//AAAAAAAAAAAFAP//AAAAAAAAAAAGAP//AAAAAAAAAAAHAP//AAAAAAAAAAAIAP//AAAAAAAAAAAJAP//AAAAAAAAAAAKAP//AAAAAAAAAAALAP//AAAAAAAAAAAMAP//AAAAAAAAAAANAP//AAAAAAAAAAAOAP//AAAAAAAAAAAPAP//AAAAAAAAAAAQAP//AAAAAAAAAAARAP//AAAAAAAAAAASAP//AAAAAAAAAAATAP//AAAAAAAAAAAUAP//AAAAAAAAAAAVAP//AAAAAAAAAAAWAP//AAAAAAAAAAAXAP//AAAAAAAAAAD//wkAAAAAAAAAAAD//woAAAAAAAAAAAD//wsAAAAAAAAAAAAAAAkAAAAAAAAAAAAAAAoAAAAAAAAAAAAAAAsAAAAAAAAAAAABAAkAAAAAAAAAAAABAAoAAAAAAAAAAAABAAsAAAAAAAAAAAACAAkAAAAAAAAAAAACAAoAAAAAAAAAAAACAAsAAAAAAAAAAAADAAkAAAAAAAAAAAADAAoAAAAAAAAAAAADAAsAAAAAAAAAAAAEAAkAAAAAAAAAAAAEAAoAAAAAAAAAAAAEAAsAAAAAAAAAAAAFAAkAAAAAAAAAAAAFAAoAAAAAAAAAAAAFAAsAAAAAAAAAAAAGAAkAAAAAAAAAAAAGAAoAAAAAAAAAAAAGAAsAAAAAAAAAAAAHAAkAAAAAAAAAAAAHAAoAAAAAAAAAAAAHAAsAAAAAAAAAAAAIAAkAAAAAAAAAAAAIAAoAAAAAAAAAAAAIAAsAAAAAAAAAAAAJAAkAAAAAAAAAAAAJAAoAAAAAAAAAAAAJAAsAAAAAAAAAAAAKAAkAAAAAAAAAAAAKAAoAAAAAAAAAAAAKAAsAAAAAAAAAAAALAAkAAAAAAAAAAAALAAoAAAAAAAAAAAALAAsAAAAAAAAAAAAMAAkAAAAAAAAAAAAMAAoAAAAAAAAAAAAMAAsAAAAAAAAAAAANAAkAAAAAAAAAAAANAAoAAAAAAAAAAAANAAsAAAAAAAAAAAAOAAkAAAAAAAAAAAAOAAoAAAAAAAAAAAAOAAsAAAAAAAAAAAAPAAkAAAAAAAAAAAAPAAoAAAAAAAAAAAAPAAsAAAAAAAAAAAAQAAkAAAAAAAAAAAAQAAoAAAAAAAAAAAAQAAsAAAAAAAAAAAARAAkAAAAAAAAAAAARAAoAAAAAAAAAAAARAAsAAAAAAAAAAAASAAkAAAAAAAAAAAASAAoAAAAAAAAAAAASAAsAAAAAAAAAAAATAAkAAAAAAAAAAAATAAoAAAAAAAAAAAATAAsAAAAAAAAAAAAUAAkAAAAAAAAAAAAUAAoAAAAAAAAAAAAUAAsAAAAAAAAAAAAVAAkAAAAAAAAAAAAVAAoAAAAAAAAAAAAVAAsAAAAAAAAAAAAWAAkAAAAAAAAAAAAWAAoAAAAAAAAAAAAWAAsAAAAAAAAAAAAXAAkAAAAAAAAAAAAXAAoAAAAAAAAAAAAXAAsAAAAAAAAAAAD///v/AAAAAAAAAAD///z/AAAAAAAAAAD///3/AAAAAAAAAAD///7/AAAAAAAAAAAAAPv/AAAAAAAAAAAAAPz/AAAAAAAAAAAAAP3/AAAAAAAAAAAAAP7/AAAAAAAAAAABAPv/AAAAAAAAAAABAPz/AAAAAAAAAAABAP3/AAAAAAAAAAABAP7/AAAAAAAAAAACAPv/AAAAAAAAAAACAPz/AAAAAAAAAAACAP3/AAAAAAAAAAACAP7/AAAAAAAAAAADAPv/AAAAAAAAAAADAPz/AAAAAAAAAAADAP3/AAAAAAAAAAADAP7/AAAAAAAAAAAEAPv/AAAAAAAAAAAEAPz/AAAAAAAAAAAEAP3/AAAAAAAAAAAEAP7/AAAAAAAAAAAFAPv/AAAAAAAAAAAFAPz/AAAAAAAAAAAFAP3/AAAAAAAAAAAFAP7/AAAAAAAAAAAGAPv/AAAAAAAAAAAGAPz/AAAAAAAAAAAGAP3/AAAAAAAAAAAGAP7/AAAAAAAAAAAHAPv/AAAAAAAAAAAHAPz/AAAAAAAAAAAHAP3/AAAAAAAAAAAHAP7/AAAAAAAAAAAIAPv/AAAAAAAAAAAIAPz/AAAAAAAAAAAIAP3/AAAAAAAAAAAIAP7/AAAAAAAAAAAJAPv/AAAAAAAAAAAJAPz/AAAAAAAAAAAJAP3/AAAAAAAAAAAJAP7/AAAAAAAAAAAKAPv/AAAAAAAAAAAKAPz/AAAAAAAAAAAKAP3/AAAAAAAAAAAKAP7/AAAAAAAAAAALAPv/AAAAAAAAAAALAPz/AAAAAAAAAAALAP3/AAAAAAAAAAALAP7/AAAAAAAAAAAMAPv/AAAAAAAAAAAMAPz/AAAAAAAAAAAMAP3/AAAAAAAAAAAMAP7/AAAAAAAAAAANAPv/AAAAAAAAAAANAPz/AAAAAAAAAAANAP3/AAAAAAAAAAANAP7/AAAAAAAAAAAOAPv/AAAAAAAAAAAOAPz/AAAAAAAAAAAOAP3/AAAAAAAAAAAOAP7/AAAAAAAAAAAPAPv/AAAAAAAAAAAPAPz/AAAAAAAAAAAPAP3/AAAAAAAAAAAPAP7/AAAAAAAAAAAQAPv/AAAAAAAAAAAQAPz/AAAAAAAAAAAQAP3/AAAAAAAAAAAQAP7/AAAAAAAAAAARAPv/AAAAAAAAAAARAPz/AAAAAAAAAAARAP3/AAAAAAAAAAARAP7/AAAAAAAAAAASAPv/AAAAAAAAAAASAPz/AAAAAAAAAAASAP3/AAAAAAAAAAASAP7/AAAAAAAAAAATAPv/AAAAAAAAAAATAPz/AAAAAAAAAAATAP3/AAAAAAAAAAATAP7/AAAAAAAAAAAUAPv/AAAAAAAAAAAUAPz/AAAAAAAAAAAUAP3/AAAAAAAAAAAUAP7/AAAAAAAAAAAVAPv/AAAAAAAAAAAVAPz/AAAAAAAAAAAVAP3/AAAAAAAAAAAVAP7/AAAAAAAAAAAWAPv/AAAAAAAAAAAWAPz/AAAAAAAAAAAWAP3/AAAAAAAAAAAWAP7/AAAAAAAAAAAXAPv/AAAAAAAAAAAXAPz/AAAAAAAAAAAXAP3/AAAAAAAAAAAXAP7/AAAAAAAAAAD8//v/AAAAAAAAAAD8//z/AAAAAAAAAAD8//3/AAAAAAAAAAD8//7/AAAAAAAAAAD8////AAAAAAAAAAD8/wAAAAAAAAAAAAD8/wEAAAAAAAAAAAD8/wIAAAAAAAAAAAD8/wMAAAAAAAAAAAD8/wQAAAAAAAAAAAD8/wUAAAAAAAAAAAD8/wYAAAAAAAAAAAD8/wcAAAAAAAAAAAD8/wgAAAAAAAAAAAD8/wkAAAAAAAAAAAD8/woAAAAAAAAAAAD8/wsAAAAAAAAAAAD9//v/AAAAAAAAAAD9//z/AAAAAAAAAAD9//3/AAAAAAAAAAD9//7/AAAAAAAAAAD9////AAAAAAAAAAD9/wAAAAAAAAAAAAD9/wEAAAAAAAAAAAD9/wIAAAAAAAAAAAD9/wMAAAAAAAAAAAD9/wQAAAAAAAAAAAD9/wUAAAAAAAAAAAD9/wYAAAAAAAAAAAD9/wcAAAAAAAAAAAD9/wgAAAAAAAAAAAD9/wkAAAAAAAAAAAD9/woAAAAAAAAAAAD9/wsAAAAAAAAAAAD+//v/AAAAAAAAAAD+//z/AAAAAAAAAAD+//3/AAAAAAAAAAD+//7/AAAAAAAAAAD+////AAAAAAAAAAD+/wAAAAAAAAAAAAD+/wEAAAAAAAAAAAD+/wIAAAAAAAAAAAD+/wMAAAAAAAAAAAD+/wQAAAAAAAAAAAD+/wUAAAAAAAAAAAD+/wYAAAAAAAAAAAD+/wcAAAAAAAAAAAD+/wgAAAAAAAAAAAD+/wkAAAAAAAAAAAD+/woAAAAAAAAAAAD+/wsAAAAAAAAAAAAYAPv/AAAAAAAAAAAYAPz/AAAAAAAAAAAYAP3/AAAAAAAAAAAYAP7/AAAAAAAAAAAYAP//AAAAAAAAAAAYAAAAAAAAAAAAAAAYAAEAAAAAAAAAAAAYAAIAAAAAAAAAAAAYAAMAAAAAAAAAAAAYAAQAAAAAAAAAAAAYAAUAAAAAAAAAAAAYAAYAAAAAAAAAAAAYAAcAAAAAAAAAAAAYAAgAAAAAAAAAAAAYAAkAAAAAAAAAAAAYAAoAAAAAAAAAAAAYAAsAAAAAAAAAAAAZAPv/AAAAAAAAAAAZAPz/AAAAAAAAAAAZAP3/AAAAAAAAAAAZAP7/AAAAAAAAAAAZAP//AAAAAAAAAAAZAAAAAAAAAAAAAAAZAAEAAAAAAAAAAAAZAAIAAAAAAAAAAAAZAAMAAAAAAAAAAAAZAAQAAAAAAAAAAAAZAAUAAAAAAAAAAAAZAAYAAAAAAAAAAAAZAAcAAAAAAAAAAAAZAAgAAAAAAAAAAAAZAAkAAAAAAAAAAAAZAAoAAAAAAAAAAAAZAAsAAAAAAAAAAAAaAPv/AAAAAAAAAAAaAPz/AAAAAAAAAAAaAP3/AAAAAAAAAAAaAP7/AAAAAAAAAAAaAP//AAAAAAAAAAAaAAAAAAAAAAAAAAAaAAEAAAAAAAAAAAAaAAIAAAAAAAAAAAAaAAMAAAAAAAAAAAAaAAQAAAAAAAAAAAAaAAUAAAAAAAAAAAAaAAYAAAAAAAAAAAAaAAcAAAAAAAAAAAAaAAgAAAAAAAAAAAAaAAkAAAAAAAAAAAAaAAoAAAAAAAAAAAAaAAsAAAAAAAAAAAD6//v/AAAAAAAAAAD6//z/AAAAAAAAAAD6//3/AAAAAAAAAAD6//7/AAAAAAAAAAD6////AAAAAAAAAAD6/wAAAAAAAAAAAAD6/wEAAAAAAAAAAAD6/wIAAAAAAAAAAAD6/wMAAAAAAAAAAAD6/wQAAAAAAAAAAAD6/wUAAAAAAAAAAAD6/wYAAAAAAAAAAAD6/wcAAAAAAAAAAAD6/wgAAAAAAAAAAAD6/wkAAAAAAAAAAAD6/woAAAAAAAAAAAD6/wsAAAAAAAAAAAD7//v/AAAAAAAAAAD7//z/AAAAAAAAAAD7//3/AAAAAAAAAAD7//7/AAAAAAAAAAD7////AAAAAAAAAAD7/wAAAAAAAAAAAAD7/wEAAAAAAAAAAAD7/wIAAAAAAAAAAAD7/wMAAAAAAAAAAAD7/wQAAAAAAAAAAAD7/wUAAAAAAAAAAAD7/wYAAAAAAAAAAAD7/wcAAAAAAAAAAAD7/wgAAAAAAAAAAAD7/wkAAAAAAAAAAAD7/woAAAAAAAAAAAD7/wsAAAAAAAAAAAA=")
script = null

[node name="ButtonShootClick3" parent="." instance=ExtResource("3_0uxqg")]
offset_left = 354.0
offset_top = 15.0
offset_right = 1876.0
offset_bottom = 365.0
tooltip_text = "CANNOT BE UNDONE!"
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0.00999999, 0.00999999, 1)
theme_override_constants/outline_size = 75
text = "Reset Waves
"
button_data = SubResource("Resource_fjbbq")

[node name="LeftDoor" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(8, 96)
texture = ExtResource("6_p5fwk")
hframes = 2
vframes = 2
frame = 2
script = ExtResource("5_emg15")

[node name="Area2D" type="Area2D" parent="LeftDoor"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftDoor/Area2D"]
position = Vector2(9, 0)
shape = SubResource("RectangleShape2D_linbi")

[node name="Enter" type="Area2D" parent="LeftDoor"]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="LeftDoor/Enter"]
position = Vector2(-3, 0)
shape = SubResource("RectangleShape2D_kh562")
debug_color = Color(0.371579, 0.608447, 0.265125, 0.42)

[node name="RightDoor" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(360, 96)
texture = ExtResource("6_p5fwk")
hframes = 2
vframes = 2
script = ExtResource("5_emg15")

[node name="Area2D" type="Area2D" parent="RightDoor"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightDoor/Area2D"]
position = Vector2(-10, 0)
shape = SubResource("RectangleShape2D_2shqy")

[node name="Enter" type="Area2D" parent="RightDoor"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightDoor/Enter"]
position = Vector2(2, 0.5)
shape = SubResource("RectangleShape2D_kh562")
debug_color = Color(0.371579, 0.608447, 0.265125, 0.42)

[node name="CurrentWaves" type="Label" parent="."]
offset_left = 355.0
offset_top = 35.0
offset_right = 1736.0
offset_bottom = 308.0
scale = Vector2(0.025, 0.025)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.75, 0.75, 0.75, 1)
theme_override_colors/font_outline_color = Color(0.5, 0.5, 0.5, 1)
theme_override_constants/shadow_offset_y = 15
theme_override_constants/outline_size = 35
theme_override_constants/shadow_outline_size = 35
theme_override_font_sizes/font_size = 200
text = "Current Wave:"

[node name="CurrentMoney" type="Label" parent="."]
offset_left = 17.0
offset_top = 16.0
offset_right = 1150.0
offset_bottom = 221.0
scale = Vector2(0.05, 0.05)
theme_override_colors/font_color = Color(1, 0.8, 0, 1)
theme_override_colors/font_shadow_color = Color(0.75, 0.6, 0, 1)
theme_override_colors/font_outline_color = Color(0.5, 0.4, 0, 1)
theme_override_constants/shadow_offset_y = 15
theme_override_constants/outline_size = 35
theme_override_constants/shadow_outline_size = 35
theme_override_font_sizes/font_size = 150
text = "Current Money:"
script = ExtResource("8_ftbyc")

[node name="HowToPlay" type="Label" parent="."]
offset_left = 129.0
offset_top = 14.0
offset_right = 4323.0
offset_bottom = 2558.0
scale = Vector2(0.04, 0.04)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.75, 0.75, 0.75, 1)
theme_override_colors/font_outline_color = Color(0.5, 0.5, 0.5, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 15
theme_override_constants/outline_size = 35
theme_override_constants/shadow_outline_size = 35
theme_override_font_sizes/font_size = 250
text = "How To Play:
A ,D: Move
S: Slam Down
SpaceBar: Jump (Can Double Jump)
Left Mouse: Shoot
Right Mouse: Special Ability"

[node name="ButtonShootClick" parent="." instance=ExtResource("3_0uxqg")]
offset_left = 355.0
offset_top = 45.0
offset_right = 1663.0
offset_bottom = 395.0
scale = Vector2(0.025, 0.025)
tooltip_text = "For Testing Purposes"
action_mode = 0
text = "Next Wave"
button_data = SubResource("Resource_etkyy")

[node name="ButtonShootClick2" parent="." instance=ExtResource("3_0uxqg")]
offset_left = 20.0
offset_top = 29.0
offset_right = 1390.0
offset_bottom = 379.0
scale = Vector2(0.02, 0.02)
tooltip_text = "For Testing Purposes"
text = "Add Money"
button_data = SubResource("Resource_ctujf")

[node name="Label" type="Label" parent="."]
offset_top = 69.0
offset_right = 605.0
offset_bottom = 411.0
scale = Vector2(0.025, 0.025)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 15
theme_override_constants/outline_size = 50
theme_override_constants/shadow_outline_size = 50
theme_override_font_sizes/font_size = 250
text = "Shop"

[node name="Label2" type="Label" parent="."]
offset_left = 310.0
offset_top = 91.0
offset_right = 915.0
offset_bottom = 433.0
scale = Vector2(0.02, 0.02)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 15
theme_override_constants/outline_size = 50
theme_override_constants/shadow_outline_size = 50
theme_override_font_sizes/font_size = 250
text = "Fight"

[node name="MusicButton" type="Button" parent="."]
visible = false
offset_left = 97.0
offset_top = 17.0
offset_right = 810.0
offset_bottom = 367.0
scale = Vector2(0.025, 0.025)
focus_mode = 0
theme_override_font_sizes/font_size = 250
disabled = true
toggle_mode = true
text = "Music"
script = ExtResource("11_rwkms")

[node name="ArrowSign" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(315, 96)
texture = ExtResource("12_a6mvh")
